fix letter spacing issues

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -103,8 +103,6 @@
 
       &__paragraph {
         color: $col-gray;
-        font-weight: 400;
-        line-height: 1.3;
 
         span {
           color: $col-boulder;
