--- a/src/scss/shared/_description.scss
+++ b/src/scss/shared/_description.scss
@@ -1,11 +1,14 @@
 %description-12 {
   font-size: 12px;
   font-family: $font-sauce;
+  line-height: 1.3;
 }
 
 %description-16 {
   font-family: $font-sauce;
   font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.3;
 }
 
 %description-32 {
